trunk/Archive2/d1/2860e784b6f577/output
main.cpp:1:9: error: expected identifier before 'class'
  struct class {};
         ^
main.cpp:1:16: error: multiple types in one declaration
  struct class {};
                ^
